# TrustTunnelClient

./: .clang-tidy  .gitignore  .markdownlintignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  conandata.yml  conanfile.py  requirements.txt
.devcontainer/: Dockerfile
.github/workflows/: autotag.yml  bench.yml  build-and-deploy-release.yml  build-console.yml  create-release-pr.yml  deploy-android.yml  deploy-apple.yml  deploy-windows.yml  deploy.yml  increment-version.yml  lint-md.yml  lint-rust.yml  mirror.yaml  mirror.yml  prepare-release.yml  publish-release.yml  publish-snapshot.yml  run-browser-integration-test.yml  run-integration-tests.yml  run-live-integration-tests.yml  run-live-unit-tests.yml  run-tests-private.yml  run-tests-public.yml  run-tests.yml  setup-workflows-public.yml  setup-workflows.yml  test.yml  upload-conan-recipes.yml
.specs/: version-stamping.md
TrustTunnel-v1.2.0-portable-win64/: trusttunnel_client.toml
bamboo-specs/: bamboo.yaml  deploy_cli.yaml  increment-version.yaml  run-instrumented-test.yaml  run-integration-test.yaml  run-tests.yaml  upload-conan-recipes.yaml
cmake/: version.cmake
common/: CMakeLists.txt
common/src/: default_settings.h  event_loop.cpp  file_logger.cpp  fsm_validation.cpp  platform.cpp  utils.cpp
common/test/: test_dns_stamp.cpp  test_event_loop.cpp  test_file_logger.cpp  test_resolve_endpoint_address.cpp
conan/profiles/: apple-macos.jinja  apple.jinja
core/: CMakeLists.txt
core/src/: direct_upstream.cpp  direct_upstream.h  dns_client.cpp  dns_handler.cpp  dns_handler.h  dns_proxy_accessor.cpp  domain_filter.cpp  domain_lookuper.cpp  fake_upstream.cpp  fake_upstream.h  fallbackable_upstream_connector.cpp  http2_upstream.cpp  http2_upstream.h  http3_upstream.cpp  http3_upstream.h  http_icmp_multiplexer.cpp  http_udp_multiplexer.cpp  icmp_manager.cpp  memfile_buffer.cpp  plain_dns_manager.cpp  plain_dns_manager.h  plain_dns_message_handler.cpp  single_upstream_connector.cpp  single_upstream_connector.h  socks_listener.cpp  socks_listener.h  tun_device_listener.cpp  tun_device_listener.h  tunnel.cpp  upstream_multiplexer.cpp  upstream_multiplexer.h  utils.cpp  verify_callback_common.h  vpn_client.cpp  vpn_connection.cpp  vpn_dns_resolver.cpp  vpn_fsm.cpp  vpn_manager.cpp  vpn_manager.h
core/test/: mock_dns_server.cpp  test_connection_statistics.cpp  test_dns_routing.cpp  test_domain_filter.cpp  test_domain_lookuper.cpp  test_fallbackable_upstream_connector.cpp  test_http_udp_multiplexer.cpp  test_memfile_buffer.cpp  test_mock_c.cpp  test_mock_vpn_client.cpp  test_quic_connection_migration.cpp  test_single_upstream_connector.cpp  test_tunnel.cpp  test_upstream_multiplexer.cpp  test_utils.cpp  test_vpn_client_fsm.cpp  test_vpn_client_live.cpp  test_vpn_dns_resolver.cpp  test_vpn_manager_fsm.cpp  test_vpn_manager_fsm_recovery.cpp
fastlane/: README.md
gui-app/: package.json
gui-app/src/: App.tsx  index.css
gui-app/src-tauri/: Cargo.toml  tauri.conf.json
integration-tests/: Dockerfile  build_client.sh  integration_test.sh
integration-tests/client/: Dockerfile  entrypoint.sh  socks_tests.sh  tun_tests.sh
integration-tests/endpoint/: Dockerfile
integration-tests/network-load-simulator/: Dockerfile  entrypoint.sh  get_location.sh  index.js
integration-tests/tests/: client_setup.sh
net/: CMakeLists.txt
net/src/: dns_manager.cpp  dns_utils.cpp  http1.cpp  http2.cpp  http_session.cpp  locations_pinger.cpp  locations_pinger_runner.cpp  mac_dns_settings_manager.mm  os_tunnel.cpp  os_tunnel_linux.cpp  os_tunnel_mac.cpp  os_tunnel_win.cpp  os_tunnel_win.h  ping.cpp  ping.h  quic_connector.cpp  quic_utils.cpp  socket_manager.cpp  socks5_listener.cpp  tcp_socket.cpp  tls.cpp  tls13_utils.cpp  udp_socket.cpp  util.cpp  utils.cpp  wfp_firewall.cpp  wfp_firewall.h
net/test/: mock_ping_sockets.h  test_dns_utils.cpp  test_http2.cpp  test_http_headers.cpp  test_locations_pinger.cpp  test_locations_pinger_offline.cpp  test_locations_pinger_runner.cpp  test_locations_pinger_runner_offline.cpp  test_net_utils.cpp  test_ping.cpp  test_ping_offline.cpp  test_quic_connector.cpp  test_quic_parse.cpp  test_tls_serialize.cpp
platform/android/: README.md  settings.gradle.kts
platform/apple/: TrustTunnelClient.podspec  build_framework.sh
platform/windows/: .gitignore  CMakeLists.txt  README.md
platform/windows/cmake/: TrustTunnelClientWindowsConfig.cmake
platform/windows/include/vpn/: vpn_easy.h  vpn_easy_service.h
platform/windows/scripts/: build_package.ps1  publish_maven.ps1
platform/windows/src/: pipe.cpp  pipe.h  scoped_file_lock.h  service_installer.cpp  vpn_easy.cpp  vpn_easy_log.h  vpn_easy_pipe.cpp  vpn_easy_pipe.h  vpn_easy_ring_buffer_mutex.h  vpn_easy_service.cpp
platform/windows/test/: pipe_test.cpp  vpn_easy_log_test.cpp  vpn_easy_pipe_test.cpp  vpn_easy_ring_buffer_test.cpp  vpn_easy_service_test.cpp  vpn_easy_test.cpp
scripts/: bootstrap_conan_deps.py  conan_export.py  export_conan.sh  increment_version.sh  install.sh  publish_android.py  set_version.sh
standalone/: CMakeLists.txt  standalone_client.cpp
standalone/src/: client.cpp  config.cpp  standalone_client.cpp  utils.cpp  utils.h
standalone_client/: CMakeLists.txt  config.cpp  standalone_client.cpp
tcpip/: CMakeLists.txt
tcpip/src/: icmp_request.cpp  icmp_request_manager.cpp  ip_hooks.cpp  libevent_lwip.cpp  tcp_conn_manager.cpp  tcp_raw.cpp  tcpip_api.cpp  tcpip_common.cpp  tcpip_util.cpp  udp_conn_manager.cpp
tcpip/test/: test_tun_echo.cpp  test_util.cpp  test_vpn_packet_pool.cpp
trusttunnel/: CMakeLists.txt  Cargo.toml  README.md  trusttunnel_client.rc  trusttunnel_client.rc.in
trusttunnel/deeplink-ffi/: Cargo.toml
trusttunnel/setup_wizard/: Cargo.toml  build.rs
trusttunnel/src/: auto_network_monitor.cpp  client.cpp  config.cpp  connection_info.cpp  persistent_ring_buffer.cpp  (+1 more)
webui/: .gitignore  Makefile  README.md  go.mod
(+158 files in other folders)
